RESOLVED FIXED55222
Test apps crash silently (without invoking post-mortem debugger) when launched from Cygwin 1.7
https://bugs.webkit.org/show_bug.cgi?id=55222
Summary Test apps crash silently (without invoking post-mortem debugger) when launche...
Adam Roben (:aroben)
Reported 2011-02-25 08:57:39 PST
To reproduce: 1. Add a CRASH() call to main() in DumpRenderTree.cpp 2. run-webkit-tests DRT crashes, but the post-mortem debugger doesn't get a chance to attach. It just crashes silently.
Attachments
Work around Cygwin's crash-suppression behavior (7.35 KB, patch)
2011-02-25 09:05 PST, Adam Roben (:aroben)
no flags
Work around Cygwin's crash-suppression behavior (8.82 KB, patch)
2011-02-25 09:13 PST, Adam Roben (:aroben)
darin: review+
Adam Roben (:aroben)
Comment 1 2011-02-25 08:57:53 PST
It looks like Cygwin calls ::SetErrorMode(SEM_FAILCRITICALERRORS), which causes this behavior. We can work around it by calling ::SetErrorMode(0) when DRT launches.
Adam Roben (:aroben)
Comment 2 2011-02-25 09:05:43 PST
Created attachment 83820 [details] Work around Cygwin's crash-suppression behavior
Adam Roben (:aroben)
Comment 3 2011-02-25 09:13:37 PST
Created attachment 83821 [details] Work around Cygwin's crash-suppression behavior
Adam Roben (:aroben)
Comment 4 2011-02-25 10:48:57 PST
Build Bot
Comment 5 2011-02-25 10:55:06 PST
Note You need to log in before you can comment on or make changes to this bug.