Work around Cygwin's crash-suppression behavior

Cygwin calls ::SetErrorMode(SEM_FAILCRITICALERRORS), which any processes it launches will
inherit. This is bad for testing/debugging, as it causes the post-mortem debugger not to be
invoked. (Cygwin does this because it makes crashes more UNIX-y.) We reset the error mode
when our test apps launch to work around Cygwin's behavior.

Fixes <http://webkit.org/b/55222> Test apps crash silently (without invoking post-mortem
debugger) when launched from Cygwin 1.7

Reviewed by Darin Adler.

Source/JavaScriptCore:

* API/tests/testapi.c: Added a now-needed #include.
(main):
* jsc.cpp:
(main):
Call ::SetErrorMode(0) to undo Cygwin's folly.

* JavaScriptCore.vcproj/testapi/testapiCommon.vsprops: Define NOMINMAX like many of our
other projects do so that windows.h won't define min/max macros that interfere with
std::numeric_limits<T>::min/max.

Tools:

* DumpRenderTree/win/DumpRenderTree.cpp:
(main):
* TestWebKitAPI/win/main.cpp:
(main):
* WebKitAPITest/main.cpp:
(main):
* WebKitTestRunner/win/TestControllerWin.cpp:
(WTR::TestController::platformInitialize):
Call ::SetErrorMode(0) to undo Cygwin's folly.

Canonical link: https://commits.webkit.org/69614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79695 268f45cc-cd09-0410-ab3c-d52691b4dbfc