Tools/DumpRenderTree/win/DumpRenderTree.cpp
@@ -1258,6 +1258,11 @@ static LONG WINAPI exceptionFilter(EXCEPTION_POINTERS*)
 
 int main(int argc, char* argv[])
 {
+    // Cygwin calls ::SetErrorMode(SEM_FAILCRITICALERRORS), which we will inherit. This is bad for
+    // testing/debugging, as it causes the post-mortem debugger not to be invoked. We reset the
+    // error mode here to work around Cygwin's behavior. See <http://webkit.org/b/55222>.
+    ::SetErrorMode(0);
+
     ::SetUnhandledExceptionFilter(exceptionFilter);
 
     leakChecking = false;
