Tools/WebKitAPITest/main.cpp
@@ -28,6 +28,11 @@ using namespace WebKitAPITest;
 
 int main(int, char*[])
 {
+    // Cygwin calls ::SetErrorMode(SEM_FAILCRITICALERRORS), which we will inherit. This is bad for
+    // testing/debugging, as it causes the post-mortem debugger not to be invoked. We reset the
+    // error mode here to work around Cygwin's behavior. See <http://webkit.org/b/55222>.
+    ::SetErrorMode(0);
+
     // FIXME: Remove this line once <http://webkit.org/b/32867> is fixed.
     OleInitialize(0);
 
